fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ a {
   text-align: center;
   max-width: 880px;
   margin: 0 auto;
+  padding: 10px;
 }
 
 .App-logo {
