--- a/src/styles/pages/FiveDayTemperature.css
+++ b/src/styles/pages/FiveDayTemperature.css
@@ -6,5 +6,6 @@
 .five-day-temp-day-section-container {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  gap: .25rem;
   overflow: auto;
 }
